syntax = "proto3";

package golem.component;

import "golem/common/error_body.proto";

message ComponentError {
  oneof error {
    golem.common.ErrorsBody bad_request = 1;
    golem.common.ErrorBody unauthorized = 2;
    golem.common.ErrorBody limit_exceeded = 3;
    golem.common.ErrorBody not_found = 4;
    golem.common.ErrorBody already_exists = 5;
    golem.common.ErrorBody internal_error = 6;
  }
}
