syntax = "proto3";

package golem.component;

import "golem/component/versioned_component_id.proto";

message UserComponentId {
  VersionedComponentId versioned_component_id = 1;
}
